<?xml version="1.0"?>
<!-- Licensed to the Apache Software Foundation (ASF) under one or more contributor license agreements. See the NOTICE file 
	distributed with this work for additional information regarding copyright ownership. The ASF licenses this file to You under 
	the Apache License, Version 2.0 (the "License"); you may not use this file except in compliance with the License. You may 
	obtain a copy of the License at http://www.apache.org/licenses/LICENSE-2.0 Unless required by applicable law or agreed to 
	in writing, software distributed under the License is distributed on an "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF 
	ANY KIND, either express or implied. See the License for the specific language governing permissions and limitations under 
	the License. -->
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">

	<modelVersion>4.0.0</modelVersion>

	<groupId>com.github.ppodgorsek.email</groupId>
	<artifactId>commons-email-jakarta</artifactId>
	<version>2.0.0</version>
	<name>Apache Commons Email</name>

	<inceptionYear>2001</inceptionYear>
	<description>
        Apache Commons Email aims to provide an API for sending email. It is built on top of
        the JavaMail API, which it aims to simplify. This is a fork that supports Jakarta, as the
        Apache project still hasn't merged existing PRs to replace javax.
    </description>

	<url>https://commons.apache.org/proper/commons-email/</url>

	<licenses>
		<license>
			<name>The Apache Software License, Version 2.0</name>
			<url>http://www.apache.org/licenses/LICENSE-2.0.txt</url>
			<distribution>repo</distribution>
		</license>
	</licenses>

	<distributionManagement>
		<snapshotRepository>
			<id>sonatype-oss-snapshots</id>
			<name>Sonatype OSS Snapshot Repository</name>
			<url>https://oss.sonatype.org/content/repositories/snapshots</url>
		</snapshotRepository>
		<repository>
			<id>sonatype-oss-releases</id>
			<name>Sonatype OSS Release Repository</name>
			<url>https://oss.sonatype.org/service/local/staging/deploy/maven2</url>
		</repository>
	</distributionManagement>

	<issueManagement>
		<system>jira</system>
		<url>https://issues.apache.org/jira/browse/EMAIL</url>
	</issueManagement>

	<scm>
		<connection>scm:git:https://gitbox.apache.org/repos/asf/commons-email</connection>
		<developerConnection>scm:git:https://gitbox.apache.org/repos/asf/commons-email</developerConnection>
		<url>https://gitbox.apache.org/repos/asf/commons-email</url>
	</scm>

	<developers>
		<developer>
			<name>dIon Gillard</name>
			<id>dion</id>
			<email>dion@apache.org</email>
			<organization>The Apache Software Foundation</organization>
			<roles>
				<role>Java Developer</role>
			</roles>
		</developer>
		<developer>
			<name>John McNally</name>
			<id>jmcnally</id>
			<email>jmcnally@collab.net</email>
			<organization>CollabNet, Inc.</organization>
			<roles />
		</developer>
		<developer>
			<name>Quinton McCombs</name>
			<id>quintonm</id>
			<email>quintonm@bellsouth.net</email>
			<organization>NequalsOne, LLC.</organization>
			<roles />
		</developer>
		<developer>
			<name>Eric Pugh</name>
			<id>epugh</id>
			<email>epugh@opensourceconnections.com</email>
			<organization>OpenSource Connections</organization>
			<roles />
		</developer>
		<developer>
			<name>Daniel Rall</name>
			<id>dlr</id>
			<email>dlr@finemaltcoding.com</email>
			<organization>CollabNet, Inc.</organization>
			<roles />
		</developer>
		<developer>
			<name>Jon Scott Stevens</name>
			<id>jon</id>
			<email>jon@latchkey.com</email>
			<organization>CollabNet, Inc.</organization>
			<roles />
		</developer>
		<developer>
			<name>Jason van Zyl</name>
			<id>jvanzyl</id>
			<email>jason@zenplex.com</email>
			<organization>Zenplex</organization>
			<roles />
		</developer>
		<developer>
			<name>Joe Germuska</name>
			<id>germuska</id>
			<email>Joe@Germuska.com</email>
			<roles />
		</developer>
		<developer>
			<name>Robert Burrell Donkin</name>
			<id>rdonkin</id>
			<email>rdonkin@apache.org</email>
			<roles />
		</developer>
		<developer>
			<name>Henning P. Schmiedehausen</name>
			<id>henning</id>
			<email>hps@intermeta.de</email>
			<organization>INTERMETA - Gesellschaft fuer Mehrwertdienste mbH</organization>
			<roles>
				<role>Java Developer</role>
			</roles>
			<timezone>2</timezone>
		</developer>
		<developer>
			<name>Stephen Colebourne</name>
			<id>scolebourne</id>
			<roles />
			<timezone>0</timezone>
		</developer>
		<developer>
			<name>Ben Speakmon</name>
			<id>bspeakmon</id>
			<email>bspeakmon@apache.org</email>
			<organization>The Apache Software Foundation</organization>
			<roles>
				<role>Java Developer</role>
			</roles>
			<timezone>-8</timezone>
		</developer>
		<developer>
			<name>Siegfried Goeschl</name>
			<id>sgoeschl</id>
			<email>sgoeschl@apache.org</email>
			<roles>
				<role>Java Developer</role>
			</roles>
			<timezone>2</timezone>
		</developer>
		<developer>
			<name>Thomas Neidhart</name>
			<id>tn</id>
			<email>tn@apache.org</email>
			<organization>The Apache Software Foundation</organization>
			<roles />
		</developer>
		<developer>
			<id>ggregory</id>
			<name>Gary Gregory</name>
			<email>ggregory at apache.org</email>
			<url>https://www.garygregory.com</url>
			<organization>The Apache Software Foundation</organization>
			<organizationUrl>https://www.apache.org/</organizationUrl>
			<roles>
				<role>PMC Member</role>
			</roles>
			<timezone>America/New_York</timezone>
			<properties>
				<picUrl>https://people.apache.org/~ggregory/img/garydgregory80.png</picUrl>
			</properties>
		</developer>
	</developers>
	<contributors>
		<contributor>
			<name>Bindul Bhowmik</name>
		</contributor>
		<contributor>
			<name>Colin Chalmers</name>
			<email>colin.chalmers@maxware.nl</email>
		</contributor>
		<contributor>
			<name>Frank Y. Kim</name>
			<email>frank.kim@clearink.com</email>
		</contributor>
		<contributor>
			<name>Regis Koenig</name>
		</contributor>
		<contributor>
			<name>Stephen Kruger</name>
		</contributor>
		<contributor>
			<name>Sean Legassick</name>
			<email>sean@informage.net</email>
		</contributor>
		<contributor>
			<name>Andrew Liles</name>
		</contributor>
		<contributor>
			<name>Cedrik Lime</name>
		</contributor>
		<contributor>
			<name>Mark Lowe</name>
			<email>mark.lowe@boxstuff.com</email>
		</contributor>
		<contributor>
			<name>Brett McLaughlin</name>
			<email>bmclaugh@algx.net</email>
		</contributor>
		<contributor>
			<name>Piero Ottuzzi</name>
		</contributor>
		<contributor>
			<name>Niall Pemberton</name>
		</contributor>
		<contributor>
			<name>Greg Ritter</name>
			<email>greg@shwoop.com</email>
		</contributor>
		<contributor>
			<name>Corey Scott</name>
			<email>corey.scott@gmail.com</email>
		</contributor>
		<contributor>
			<name>Eric Spiegelberg</name>
			<email>eric@spiegs.com</email>
		</contributor>
		<contributor>
			<name>Dominik Stadler</name>
		</contributor>
		<contributor>
			<name>Matthias Wessendorf</name>
			<email>matthias@wessendorf.net</email>
		</contributor>
		<contributor>
			<name>Brandon Wolfe</name>
		</contributor>
		<contributor>
			<name>Alexander Lehmann</name>
			<email>alexlehm@gmail.com</email>
		</contributor>
		<contributor>
			<name>Vegard Stuen</name>
			<email>vegard.stuen@gmail.com</email>
		</contributor>
		<contributor>
			<name>Paul Podgorsek</name>
		</contributor>
	</contributors>

	<properties>
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
		<project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
		<maven.compiler.source>11</maven.compiler.source>
		<maven.compiler.target>11</maven.compiler.target>
		<commons.componentid>email</commons.componentid>
		<commons.module.name>org.apache.commons.mail</commons.module.name>
		<commons.jira.id>EMAIL</commons.jira.id>
		<commons.jira.pid>12310474</commons.jira.pid>
		<commons.release.version>1.6.0</commons.release.version>
		<commons.release.desc>(Java 11)</commons.release.desc>
		<commons.rc.version>RC1</commons.rc.version>
		<commons.bc.version>1.5</commons.bc.version>

		<!-- override the default commons encoding property -->
		<commons.encoding>UTF-8</commons.encoding>

		<angus-mail.version>2.0.2</angus-mail.version>
		<commons-io.version>2.13.0</commons-io.version>
		<easymock.version>5.1.0</easymock.version>
		<jacoco-maven-plugin.version>0.8.10</jacoco-maven-plugin.version>
		<jakarta.mail-api.version>2.1.2</jakarta.mail-api.version>
		<junit-jupiter.version>5.9.3</junit-jupiter.version>
		<junit-platform-launcher.version>1.9.3</junit-platform-launcher.version>
		<maven-gpg-plugin.version>3.1.0</maven-gpg-plugin.version>
		<maven-javadoc-plugin.version>3.5.0</maven-javadoc-plugin.version>
		<maven-release-plugin.version>3.0.1</maven-release-plugin.version>
		<maven-source-plugin.version>3.3.0</maven-source-plugin.version>
		<maven-surefire-plugin.version>3.1.2</maven-surefire-plugin.version>
		<slf4j.version>2.0.7</slf4j.version>
		<subethasmtp.version>4.0.0</subethasmtp.version>

		<sonar.jacoco.outputDirectory>${project.build.directory}/site/jacoco</sonar.jacoco.outputDirectory>
		<sonar.jacoco.defaultReportPath>${sonar.jacoco.outputDirectory}/jacoco.exec</sonar.jacoco.defaultReportPath>
		<sonar.jacoco.xmlReportPaths>${sonar.jacoco.outputDirectory}/jacoco.xml</sonar.jacoco.xmlReportPaths>
		<sonar.coverage.jacoco.xmlReportPaths>${sonar.jacoco.xmlReportPaths}</sonar.coverage.jacoco.xmlReportPaths>
	</properties>

	<dependencies>
		<dependency>
			<groupId>com.github.ppodgorsek</groupId>
			<artifactId>subethasmtp</artifactId>
			<version>${subethasmtp.version}</version>
			<scope>test</scope>
		</dependency>
		<dependency>
			<groupId>commons-io</groupId>
			<artifactId>commons-io</artifactId>
			<version>${commons-io.version}</version>
			<scope>test</scope>
		</dependency>
		<dependency>
			<groupId>jakarta.mail</groupId>
			<artifactId>jakarta.mail-api</artifactId>
			<version>${jakarta.mail-api.version}</version>
		</dependency>
		<dependency>
			<groupId>org.easymock</groupId>
			<artifactId>easymock</artifactId>
			<version>${easymock.version}</version>
			<scope>test</scope>
		</dependency>
		<dependency>
			<groupId>org.eclipse.angus</groupId>
			<artifactId>angus-mail</artifactId>
			<version>${angus-mail.version}</version>
		</dependency>
		<dependency>
			<groupId>org.junit.jupiter</groupId>
			<artifactId>junit-jupiter</artifactId>
			<version>${junit-jupiter.version}</version>
			<scope>test</scope>
		</dependency>
		<dependency>
			<groupId>org.junit.platform</groupId>
			<artifactId>junit-platform-launcher</artifactId>
			<version>${junit-platform-launcher.version}</version>
			<scope>test</scope>
		</dependency>
		<dependency>
			<groupId>org.slf4j</groupId>
			<artifactId>slf4j-jdk14</artifactId>
			<version>${slf4j.version}</version>
			<scope>test</scope>
		</dependency>
	</dependencies>

	<build>
		<defaultGoal>clean verify pmd:check pmd:cpd-check spotbugs:check javadoc:javadoc</defaultGoal>
		<plugins>
			<plugin>
				<groupId>com.github.spotbugs</groupId>
				<artifactId>spotbugs-maven-plugin</artifactId>
				<configuration>
					<excludeFilterFile>${basedir}/conf/spotbugs-exclude-filter.xml</excludeFilterFile>
				</configuration>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-assembly-plugin</artifactId>
				<configuration>
					<descriptors>
						<descriptor>src/assembly/bin.xml</descriptor>
						<descriptor>src/assembly/src.xml</descriptor>
					</descriptors>
					<tarLongFileMode>gnu</tarLongFileMode>
				</configuration>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-gpg-plugin</artifactId>
				<version>${maven-gpg-plugin.version}</version>
				<executions>
					<execution>
						<id>sign-artifacts</id>
						<phase>verify</phase>
						<goals>
							<goal>sign</goal>
						</goals>
					</execution>
				</executions>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-jar-plugin</artifactId>
				<configuration>
					<archive combine.children="append">
						<manifest>
							<addDefaultImplementationEntries>true</addDefaultImplementationEntries>
							<addDefaultSpecificationEntries>true</addDefaultSpecificationEntries>
						</manifest>
						<manifestEntries>
							<Automatic-Module-Name>${commons.module.name}</Automatic-Module-Name>
						</manifestEntries>
					</archive>
				</configuration>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-javadoc-plugin</artifactId>
				<version>${maven-javadoc-plugin.version}</version>
				<executions>
					<execution>
						<id>attach-javadocs</id>
						<goals>
							<goal>jar</goal>
						</goals>
						<configuration>
							<additionalparam>-Xdoclint:none</additionalparam>
						</configuration>
					</execution>
				</executions>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-release-plugin</artifactId>
				<version>${maven-release-plugin.version}</version>
				<configuration>
					<mavenExecutorId>forked-path</mavenExecutorId>
				</configuration>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-source-plugin</artifactId>
				<version>${maven-source-plugin.version}</version>
				<executions>
					<execution>
						<id>attach-sources</id>
						<goals>
							<goal>jar</goal>
						</goals>
					</execution>
				</executions>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-surefire-plugin</artifactId>
				<version>${maven-surefire-plugin.version}</version>
				<configuration>
					<!-- exclude test case support classes -->
					<excludes>
						<exclude>org/apache/commons/mail/mocks/*</exclude>
						<exclude>org/apache/commons/mail/settings/*</exclude>
						<exclude>**/Abstract*Test.java</exclude>
					</excludes>
				</configuration>
			</plugin>
			<plugin>
				<groupId>org.jacoco</groupId>
				<artifactId>jacoco-maven-plugin</artifactId>
				<version>${jacoco-maven-plugin.version}</version>
				<configuration>
					<append>true</append>
					<dataFile>${sonar.jacoco.defaultReportPath}</dataFile>
					<destFile>${sonar.jacoco.defaultReportPath}</destFile>
					<output>file</output>
					<outputDirectory>${sonar.jacoco.outputDirectory}</outputDirectory>
				</configuration>
				<executions>
					<execution>
						<id>default-prepare-agent</id>
						<goals>
							<goal>prepare-agent</goal>
						</goals>
					</execution>
					<execution>
						<id>default-report</id>
						<goals>
							<goal>report</goal>
						</goals>
					</execution>
				</executions>
			</plugin>
		</plugins>
	</build>

	<reporting>
		<plugins>
			<!-- generate the changes report from changes.xml -->
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-changes-plugin</artifactId>
				<configuration>
					<issueLinkTemplate>%URL%/%ISSUE%</issueLinkTemplate>
				</configuration>
				<reportSets>
					<reportSet>
						<reports>
							<report>changes-report</report>
						</reports>
					</reportSet>
				</reportSets>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-checkstyle-plugin</artifactId>
				<configuration>
					<configLocation>${basedir}/conf/checkstyle.xml</configLocation>
					<enableRulesSummary>false</enableRulesSummary>
					<headerFile>${basedir}/conf/HEADER.txt</headerFile>
				</configuration>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-pmd-plugin</artifactId>
				<configuration>
					<targetJdk>${maven.compiler.target}</targetJdk>
				</configuration>
			</plugin>
			<plugin>
				<groupId>com.github.spotbugs</groupId>
				<artifactId>spotbugs-maven-plugin</artifactId>
				<configuration>
					<!-- <excludeFilterFile>${basedir}/spotbugs-exclude-filter.xml</excludeFilterFile> -->
				</configuration>
			</plugin>
		</plugins>
	</reporting>

	<profiles>
		<profile>
			<id>java11</id>
			<!-- For testing with Powermock. -->
			<activation>
				<jdk>[11,)</jdk>
			</activation>
			<build>
				<plugins>
					<plugin>
						<!-- SpotBugs has false positives on Java 17: [ERROR] Medium: Load of known null value in org.apache.commons.mail.MultiPartEmail.attach(DataSource, 
							String, String) [org.apache.commons.mail.MultiPartEmail] At MultiPartEmail.java:[line 421] NP_LOAD_OF_KNOWN_NULL_VALUE [ERROR] 
							Medium: Redundant nullcheck of is which is known to be null in org.apache.commons.mail.MultiPartEmail.attach(DataSource, 
							String, String) [org.apache.commons.mail.MultiPartEmail] Redundant null check at MultiPartEmail.java:[line 421] RCN_REDUNDANT_NULLCHECK_OF_NULL_VALUE 
							[ERROR] Medium: Load of known null value in org.apache.commons.mail.resolver.DataSourceClassPathResolver.resolve(String, 
							boolean) [org.apache.commons.mail.resolver.DataSourceClassPathResolver] At DataSourceClassPathResolver.java:[line 104] NP_LOAD_OF_KNOWN_NULL_VALUE 
							[ERROR] Medium: Redundant nullcheck of is which is known to be null in org.apache.commons.mail.resolver.DataSourceClassPathResolver.resolve(String, 
							boolean) [org.apache.commons.mail.resolver.DataSourceClassPathResolver] Redundant null check at DataSourceClassPathResolver.java:[line 
							104] RCN_REDUNDANT_NULLCHECK_OF_NULL_VALUE -->
						<groupId>com.github.spotbugs</groupId>
						<artifactId>spotbugs-maven-plugin</artifactId>
						<configuration>
							<maxAllowedViolations>4</maxAllowedViolations>
						</configuration>
					</plugin>
				</plugins>
			</build>
		</profile>
		<profile>
			<id>java17</id>
			<!-- For testing with Powermock. -->
			<activation>
				<jdk>[17,)</jdk>
			</activation>
			<build>
				<plugins>
					<plugin>
						<groupId>org.apache.maven.plugins</groupId>
						<artifactId>maven-surefire-plugin</artifactId>
						<configuration>
							<argLine>
								--illegal-access=permit
								--add-opens java.base/java.lang=ALL-UNNAMED
								--add-opens
								java.base/java.net=ALL-UNNAMED
								--add-opens java.base/java.io=ALL-UNNAMED
								--add-opens
								java.base/java.util=ALL-UNNAMED
								--add-opens java.base/java.util.regex=ALL-UNNAMED
								--add-opens
								java.base/java.nio.charset=ALL-UNNAMED
								--add-opens java.base/sun.nio.cs=ALL-UNNAMED
								--add-opens
								java.logging/java.util.logging=ALL-UNNAMED
							</argLine>
						</configuration>
					</plugin>
				</plugins>
			</build>
		</profile>

		<profile>
			<id>rc</id>
			<distributionManagement>
				<!-- Cannot define in parent ATM, see COMMONSSITE-26 -->
				<site>
					<id>apache.website</id>
					<name>Apache Commons Release Candidate Staging Site</name>
					<url>${commons.deployment.protocol}://people.apache.org/www/people.apache.org/builds/commons/${commons.componentid}/${commons.release.version}/${commons.rc.version}/site</url>
				</site>
			</distributionManagement>
		</profile>
	</profiles>

</project>
